# rust-todo

./: .gitignore  Cargo.toml  test.db
migrations/2022-01-19-011816_create_items/: up.sql
src/: constants.rs  db.rs  item.rs  main.rs
src/db/: models.rs  schema.rs
