[package]
name = "rust-todo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
log = "0.4.0"
env_logger = "0.8.4"
serde = "1.0.106"
serde_json = "1.0.51"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.6", features = ["serde", "v4"] }
diesel = { version = "1.4.8", features = ["sqlite", "chrono"] }
dotenv = "0.15.0"
listenfd = "0.3"
